<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_lock_unlock</name>
  <!-- Robot system version -->
  <version>5.7.2</version>
  <description>Lock or unlock the Franka Research 3 joint brakes programmatically.</description>
  <maintainer email="maxime@yaak.ai">user</maintainer>
  <license>AGPLv3</license>

  <depend>python3-requests</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
